Add plant name input box to Sightings Locator. (#292)

--- a/gobotany/plantshare/templates/plantshare.html
+++ b/gobotany/plantshare/templates/plantshare.html
@@ -50,7 +50,7 @@
     {% endif %}
 {% endif %}
 
-<div id="mini-locator">
+<div id="sightings-locator" class="mini">
     <h2>Sightings Locator</h2>
     <div class="box">
         <form>
