--- a/gobotany/plantshare/templates/sightings.html
+++ b/gobotany/plantshare/templates/sightings.html
@@ -18,8 +18,19 @@
 {% endfor %}
 </ul>
 
-<h2>Sightings Locator</h2>
-<p>here</p>
+<form id="sightings-locator">
+    <h2>Sightings Locator</h2>
+    <h3>Show recent plant sightings for</h3>
+    
+    {% csrf_token %}
+    <input type="text" autocomplete="off"
+        name="plant-name"
+        id="plant-name"
+        placeholder="scientific or common name"
+        class="suggest"
+        data-suggest-url="{% url site-plant-name-suggestions %}?q=%s">
+    <input type="submit" value="Go">
+</form>
 
 {% endblock %}
 
