--- a/gobotany/plantshare/templates/plantshare.html
+++ b/gobotany/plantshare/templates/plantshare.html
@@ -75,7 +75,8 @@
             to.</p>
             <p>Rare and endangered plants will not be displayed.</p>
         
-            <p class="full-link"><a href="{% url ps-sightings %}">View full page »</a></p>
+            <p class="full-link"><a
+                href="{% url ps-sightings %}#sightings-locator">View full page »</a></p>
         </form>
 
         {% include "_sightings_map.html" with latitude="44.53599" longitude="-70.56609" center_title="Rumford, Maine" height="297px" width="486px" zoom="6" id="mini-sightings-map" %}
