--- a/gobotany/plantshare/templates/sightings.html
+++ b/gobotany/plantshare/templates/sightings.html
@@ -2,6 +2,10 @@
 
 {% block title %}Sightings: PlantShare{% endblock %}
 
+{% block js_require %}
+    require(['util/suggester_init', 'plantshare/sightings']);
+{% endblock %}
+
 {% block body_attributes %}id="sightings" class="plantshare"{% endblock %}
 
 {% block main_content %}
@@ -30,6 +34,8 @@
         class="suggest"
         data-suggest-url="{% url site-plant-name-suggestions %}?q=%s">
     <input type="submit" value="Go">
+
+    {% include "_sightings_map.html" with latitude="44.53599" longitude="-70.56609" center_title="Rumford, Maine" height="524px" width="710px" zoom="6" id="sightings-map" %}
 </form>
 
 {% endblock %}
