--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -174,6 +174,10 @@ body.plantshare {
         h3 {
             font-size: 14px;
         }
+        #sightings-map {   /* for map on the full-size locator */
+            clear: left;
+            margin-top: 36px;
+        }
         input {
             border: 0 none;
             float: left;
