Improve alignments on sightings locator input fields.
Correct the left alignment of the placeholder text. Widen the
boxes a bit, switching to new sprite coordinates in the button
graphics file. Add an option to the suggester control to align
the left edge of the menu to the inside padded edge of the
input box in order to handle menus like these that have wide
rounded sides. (#292)

--- a/gobotany/plantshare/templates/sightings.html
+++ b/gobotany/plantshare/templates/sightings.html
@@ -32,7 +32,8 @@
         id="plant-name"
         placeholder="scientific or common name"
         class="suggest"
-        data-suggest-url="{% url site-plant-name-suggestions %}?q=%s">
+        data-suggest-url="{% url site-plant-name-suggestions %}?q=%s"
+        data-align-menu-inside-input="true">
     <input type="submit" value="Go">
 
     {% include "_sightings_map.html" with latitude="44.53599" longitude="-70.56609" center_title="Rumford, Maine" height="524px" width="710px" zoom="6" id="sightings-map" %}
