--- a/gobotany/plantshare/templates/plantshare.html
+++ b/gobotany/plantshare/templates/plantshare.html
@@ -62,7 +62,8 @@
                 id="plant-name"
                 placeholder="scientific or common name"
                 class="suggest"
-                data-suggest-url="{% url site-plant-name-suggestions %}?q=%s">
+                data-suggest-url="{% url site-plant-name-suggestions %}?q=%s"
+                data-align-menu-inside-input="true">
             <input type="submit" value="Go">
 
             <h4>How to Use</h4>
@@ -79,7 +80,7 @@
                 href="{% url ps-sightings %}#sightings-locator">View full page »</a></p>
         </form>
 
-        {% include "_sightings_map.html" with latitude="44.53599" longitude="-70.56609" center_title="Rumford, Maine" height="297px" width="486px" zoom="6" id="mini-sightings-map" %}
+        {% include "_sightings_map.html" with latitude="44.53599" longitude="-70.56609" center_title="Rumford, Maine" height="297px" width="481px" zoom="6" id="mini-sightings-map" %}
     </div>
 </div>
 
