Correct suggestions menu line height on full Sightings Locator. (#292)

--- a/gobotany/plantshare/templates/sightings.html
+++ b/gobotany/plantshare/templates/sightings.html
@@ -12,7 +12,7 @@
 <h1>Sightings</h1>
 
 <h2>Latest</h2>
-<ul>
+<ul class="sightings-list">
 {% for sighting in sightings %}
     <li><a
         href="{% url ps-sighting sighting.id %}">{{ sighting.identification }}
