--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -255,7 +255,7 @@ body.plantshare {
         }
     }
     &#sightings {
-        #main ul {
+        .sightings-list {
             line-height: normal;
             margin-bottom: 12px;
         }
