--- a/gobotany/plantshare/templates/plantshare.html
+++ b/gobotany/plantshare/templates/plantshare.html
@@ -63,7 +63,8 @@
                 placeholder="scientific or common name"
                 class="suggest"
                 data-suggest-url="{% url site-plant-name-suggestions %}?q=%s"
-                data-align-menu-inside-input="true">
+                data-align-menu-inside-input="true"
+                data-submit-on-select="true">
             <input type="submit" value="Go">
 
             <h4>How to Use</h4>
