--- a/gobotany/site/templates/gobotany/_base.html
+++ b/gobotany/site/templates/gobotany/_base.html
@@ -52,6 +52,8 @@
             {% block js_require %}{% endblock %}
         </script>
 
+        {% if in_production %}
+
 		{# Google analytics tracking code #}
 		<script type="text/javascript">
 		  var _gaq = _gaq || [];
@@ -63,7 +65,10 @@
 		    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
 		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 		  })();
-		</script>
+        </script>
+
+        {% endif %}
+
         {% block ember_templates %}{% endblock %}
     </head>
 
