Rename About to Help in the navigation and reorganize.
The newly named Help section has a new Help page which lists the various
kinds of help resources to be found in the Help section. Items are
listed in the navigation sidebar in order of relevance, with the
peripheral About and Contributors items now at the end. (#297)

--- a/gobotany/site/templates/gobotany/_help_navigation.html
+++ b/gobotany/site/templates/gobotany/_help_navigation.html
@@ -1,10 +1,6 @@
     <div class="section">
-        <h4>Help</h4>
-    </div>
-    <div class="section">
-        {% url site-about as u %}
-        <h4><a {% ifnotequal request.path u %}href="{{ u }}"{% endifnotequal %}>About Go
-                Botany</a></h4>
+        {% url site-help as u %}
+        <h4><a {% ifnotequal request.path u %}href="{{ u }}"{% endifnotequal %}>Help</a></h4>
     </div>
     <div class="section">
         {% url site-getting-started as u %}
@@ -12,18 +8,23 @@
                 Started with the Simple Key</a></h4>
     </div>
     <div class="section">
-        {% url site-advanced-map as u %}
-        <h4><a {% ifnotequal request.path u %}href="{{ u }}"{% endifnotequal %}>Advanced Map
-                to Groups</a></h4>
+        {% url site-video as u %}
+        <h4><a {% ifnotequal request.path u %}href="{{ u }}"{% endifnotequal %}>Video Help
+                Topics</a></h4>
     </div>
     <div class="section">
         {% url site-glossary-main as u %}
         <h4><a {% if not u in request.path %}href="{{ u }}"{% endif %}>Glossary</a></h4>
     </div>
     <div class="section">
-        {% url site-video as u %}
-        <h4><a {% ifnotequal request.path u %}href="{{ u }}"{% endifnotequal %}>Video Help
-                Topics</a></h4>
+        {% url site-advanced-map as u %}
+        <h4><a {% ifnotequal request.path u %}href="{{ u }}"{% endifnotequal %}>Advanced Map
+                to Groups</a></h4>
+    </div>
+    <div class="section">
+        {% url site-about as u %}
+        <h4><a {% ifnotequal request.path u %}href="{{ u }}"{% endifnotequal %}>About Go
+                Botany</a></h4>
     </div>
     <div class="section">
         {% url site-contributors as u %}
