--- a/gobotany/site/templates/gobotany/help.html
+++ b/gobotany/site/templates/gobotany/help.html
@@ -17,9 +17,10 @@
     <h2>For the Simple Key</h2>
 
     <ul>
-        <li>Getting Started with the Simple Key</li>
-        <li>Video Help Topics</li>
-        <li>Advanced Map to Groups</li>
+        <li><a href="{% url site-getting-started %}">Getting Started
+            with the Simple Key</a></li>
+        <li><a href="{% url site-video %}">Video Help Topics</a></li>
+        <li><a href="{% url site-advanced-map %}">Advanced Map to Groups</a></li>
     </ul>
 
     <h2>For the Full Key</h2>
