--- a/gobotany/static/sass/_about.scss
+++ b/gobotany/static/sass/_about.scss
@@ -4,6 +4,15 @@ $advanced-map-frame-border: 5px solid rgba(255, 255, 255, 0.8);
 $advanced-map-active-color: #1a2e12;
 $image-box-shadow-color: rgba(0, 0, 0, 0.6);
 
+#help #main {
+    ul {
+        padding: 0 0 0 16px;
+        li {
+            margin: 0 0 5px 0;
+        }
+    }
+}
+
 #about #main {
     img {
         float: right;
