--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -1090,6 +1090,9 @@ body.search-results .search-navigation a { text-decoration: underline; }
 /* These styles apply to smartphones and tablets */
 /* End media queries styles for Search results */
 /* About */
+#help #main ul { padding: 0 0 0 16px; }
+#help #main ul li { margin: 0 0 5px 0; }
+
 #about #main img { float: right; margin: 5px 0 20px 20px; }
 #about #main img .bookcover { margin-right: 89px; }
 #about #main ul { margin: 0 5px 0 18px; }
